--- a/index.html
+++ b/index.html
@@ -63,10 +63,13 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>ACH Defender</h1>
-    <p>Protecting Payroll Providers from Insufficient Funds and Fraud</p>
-  </header>
+ <header>
+  <img src="https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPOSITORY/main/ACH_Defender_Logo_green.png" 
+       alt="ACH Defender Logo" 
+       style="height: 60px; margin-bottom: 0.5rem;">
+  <h1>ACH Defender</h1>
+  <p>Protecting Payroll Providers from Insufficient Funds and Fraud</p>
+</header>
 
   <section>
     <h2>Why ACH Defender?</h2>
