--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@
 </head>
 <body>
  <header>
-  <img src="https://raw.githubusercontent.com/jsalvatore67/achdefender-site/main/ACH_Defender_Logo_green.png" 
-       alt="ACH Defender Logo" 
-       style="height: 60px; margin-bottom: 0.5rem;">
-  <h1>ACH Defender</h1>
-  <p>Protecting Payroll Providers from Insufficient Funds and Fraud</p>
+  <div style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap;">
+    <img src="https://raw.githubusercontent.com/jsalvatore67/achdefender-site/main/ACH_Defender_Logo_green.png"  
+         alt="ACH Defender Logo" 
+         style="height: 60px; margin-right: 1rem;">
+    <div>
+      <h1>ACH Defender</h1>
+      <p>Protecting Payroll Providers from Insufficient Funds and Fraud</p>
+    </div>
+  </div>
 </header>
 
   <section>
