--- a/index.html
+++ b/index.html
@@ -103,6 +103,25 @@
       <li>Other ACH applications such as rent collections or bulk receivables</li>
     </ul>
   </section>
+<section>
+  <h2>Contact Us</h2>
+  <form action="https://formsubmit.co/info@achdefender.com" method="POST">
+    <!-- Optional: prevent spam -->
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_next" value="https://achdefender.com/thank-you.html">
+
+    <label for="name">Name:</label><br>
+    <input type="text" id="name" name="name" required style="width: 100%; padding: 0.5rem; margin-bottom: 1rem;"><br>
+
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email" required style="width: 100%; padding: 0.5rem; margin-bottom: 1rem;"><br>
+
+    <label for="message">Message:</label><br>
+    <textarea id="message" name="message" rows="5" required style="width: 100%; padding: 0.5rem; margin-bottom: 1rem;"></textarea><br>
+
+    <button type="submit" class="cta-button">Send Message</button>
+  </form>
+</section>
 
   <footer>
     &copy; 2025 ACH Defender. All rights reserved.
